# activerecord-libsql

./: .env  .gitignore  CHANGELOG.md  Gemfile  README.md  Rakefile  activerecord-libsql.gemspec
bench/: benchmark.rb
ext/turso_libsql/: Cargo.toml
ext/turso_libsql/src/: lib.rs
lib/: activerecord-libsql.rb  turso_libsql.rb
lib/active_record/connection_adapters/: libsql_adapter.rb
lib/activerecord/libsql/: railtie.rb  version.rb
lib/tasks/: turso.rake
lib/turso_libsql/: connection.rb  database.rb
spec/: spec_helper.rb
spec/integration/: active_record_spec.rb  connection_spec.rb  embedded_replica_spec.rb  fork_spec.rb  solid_queue_fork_spec.rb  solid_queue_spec.rb
spec/unit/: libsql_adapter_spec.rb
tmp/arm64-darwin25/stage/: Cargo.toml  README.md  activerecord-turso.gemspec
tmp/arm64-darwin25/stage/ext/turso_libsql/: extconf.rb
tmp/arm64-darwin25/stage/ext/turso_libsql/src/: lib.rs
tmp/arm64-darwin25/stage/lib/: activerecord-libsql.rb  activerecord-turso.rb
tmp/arm64-darwin25/stage/lib/active_record/connection_adapters/: libsql_adapter.rb  turso_adapter.rb
tmp/arm64-darwin25/stage/lib/activerecord/turso/: version.rb
tmp/arm64-darwin25/turso_libsql/3.4.8/: Makefile
tmp/arm64-darwin25/turso_libsql/3.4.8/turso_libsql.bundle.dSYM/Contents/: Info.plist
tmp/arm64-darwin25/turso_libsql/3.4.8/turso_libsql.bundle.dSYM/Contents/Resources/Relocations/aarch64/: turso_libsql.bundle.yml
