[package]
name = "turso_libsql"
version = "0.1.0"
edition = "2021"

[lib]
name = "turso_libsql"
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8", features = [] }
libsql = { version = "0.9", default-features = false, features = ["remote", "tls"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
