[package]
name = "turso_libsql"
version = "0.1.0"
edition = "2021"

[lib]
name = "turso_libsql"
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8", features = [] }
curl = { version = "0.4" }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
